Only create docs on push to master

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,11 @@ name: Run-Tests-and-Generate-Model-Diagram
 # Execute the CI on push on the master branch
 on:
   push:
-    branches: [ master ]
+    branches: 
+      - master
+  pull_request:
+    branches:
+      - master
   workflow_dispatch:
 jobs:
   build:
@@ -17,7 +21,7 @@ jobs:
     name: ${{ matrix.smalltalk }}
     steps:
         # checkout the project
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
       
         # Prepare the CI - download the correct VM :-) 
       - uses: hpi-swa/setup-smalltalkCI@v1
@@ -29,6 +33,11 @@ jobs:
         shell: bash
         timeout-minutes: 15
         
+  update_docs:
+    needs: build
+    runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request'
+    steps:
       - name: Generate plantuml representation of meta-model
         run: |
           $SMALLTALK_CI_VM  $SMALLTALK_CI_IMAGE eval "'FamixTypeScript.puml' asFileReference writeStreamDo: [ :stream | stream nextPutAll:  (FamixMMUMLDocumentor new withModel: FamixTypeScriptModel andColor: Color lightBlue ; beWithStub; generatePlantUMLModel)]"
@@ -64,4 +73,3 @@ jobs:
           # We have to push from the folder where files were generated.
           # Same were the new repo was initialized in the previous step
           directory: ./doc-uml
-  
