push to the right place

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,4 +61,4 @@ jobs:
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add doc-uml
           git commit -m "Update docs for branch ${{ github.ref_name }}"
-          git push origin HEAD:${{ github.ref_name }}  # Push to the branch that triggered the workflow
+          git push origin HEAD:refs/heads/${{ github.ref_name }}  # Push to the branch that triggered the workflow
